# docs/swagger.json
@@ -81,11 +81,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "删除成功",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ResponseObject"
-                        }
+                    "204": {
+                        "description": "删除成功"
                     },
                     "400": {
                         "description": "输入参数有误",
@@ -146,7 +143,7 @@
                 }
             }
         },
-        "/v1/visitor/disable/{id}": {
+        "/v1/visitor/flip/{id}": {
             "patch": {
                 "description": "Flip某个visitor的状态，1-\u003e0;0-\u003e1",
                 "consumes": [
